--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,8 @@
 <%- include('partials/header') %>
 <h1>Home</h1>
 <p><%=startingContent%></p>
+<% posts.forEach((post)=>{ %>
+    <h2><%= post.title %></h2>
+    <p><%=post.content%></p>
+<% }) %>
 <%- include('partials/footer') %>
